# face-detection

./: .gitignore  CMakeLists.txt  Config.h.in  readme.md
src/: CMakeLists.txt  detection.cpp  detection.h  main.cpp
src/adaboost/: Matrix.h  adaboost-classifier.cpp  adaboost-classifier.h  data_gen.cpp  data_gen.h
src/facial-feature/: facial-feature.cpp  facial-feature.h
src/main/: adaboost.cpp  detection.cpp  facial-feature.cpp  skin-detection.cpp  viola-jones.cpp
src/pipeline/: camera.cpp  camera.h  detection.cpp  detection.h  filter.cpp  folder-process.cpp  folder-process.h  main.cpp
src/skin-detection/: main.cpp  skin-detection.cpp  skin-detection.h
src/util/: Benchmark.cpp  Benchmark.h  benchmark.cpp  benchmark.h  camera.cpp  camera.h  filter.cpp  filter.h  folder-process.h  ft-data.cpp  ft-data.h  ft.cpp  ft.h  image-process.cpp  image-process.h
src/viola-jones/: feature.cpp  feature.h  ft-data.cpp  ft-data.h  haar.cpp  haar.h  integral.cpp  integral.h  pyramid.cpp  pyramid.h  rectangle.cpp  rectangle.h  stage.cpp  stage.h  weak-classifier.cpp  weak-classifier.h
